load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//cue:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//cue:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//cue:__subpackages__"],
)

bzl_library(
    name = "future",
    srcs = ["future.bzl"],
    visibility = ["//cue:__subpackages__"],
)

bzl_library(
    name = "instance",
    srcs = ["instance.bzl"],
    visibility = ["//cue:__subpackages__"],
    deps = [
        ":future",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "module",
    srcs = ["module.bzl"],
    visibility = ["//cue:__subpackages__"],
)

bzl_library(
    name = "config",
    srcs = ["config.bzl"],
    visibility = ["//cue:__subpackages__"],
)

bzl_library(
    name = "export",
    srcs = ["export.bzl"],
    visibility = ["//cue:__subpackages__"],
    deps = [":factory"],
)

bzl_library(
    name = "factory",
    srcs = ["factory.bzl"],
    visibility = ["//cue:__subpackages__"],
    deps = [
        ":config",
        ":future",
        ":instance",
        ":module",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//cue:__subpackages__"],
    deps = [
        ":factory",
        ":instance",
    ],
)
