"""Provides a simple way to test your rules as an external workspace.
Add a basic smoke-test target below.
"""

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_abcue//cue:defs.bzl", "cue_instance", "cue_version")

genrule(
    name = "version_short",
    srcs = [],
    outs = ["version_short"],
    cmd = "$(CUE_BIN) version | grep 'cue version' > $@",
    toolchains = [
        "@rules_abcue//cue:resolved_toolchain",
    ],
)

write_file(
    name = "verison_golden",
    out = "version.golden",
    content = ["cue version v0.9.2\n"],
)

diff_test(
    name = "diff_test",
    file1 = ":version_short",
    file2 = ":verison_golden",
)

cue_version(
    name = "version",
)

cue_instance(
    name = "smoke_library",
    srcs = ["smoke.cue"],
    ancestor = "//cue.mod",
)
