# Override http_archive for local testing
local_repository(
    name = "rules_abcue",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_abcue setup #
######################
# Fetches the rules_abcue dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_abcue//cue:repositories.bzl", "cue_register_toolchains", "rules_abcue_dependencies")

rules_abcue_dependencies()

cue_register_toolchains(
    name = "cue",
    cue_version = "0.9.2",
)
